--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ table {
 }
 
 .indirim {
-    background-image: url("/perdeYeri/img/Dikdörtgen1.png");
+    background-image: url("./perdeYeri/img/Dikdörtgen1.png");
     background-size: 100% 100%;
     height: 15vh;
 }
